# haskell-probability-monads

./: .setup-config  Classify.hs  LICENSE  Probability.cabal  ProbabilityMonads.cabal  README  TODO
Control/Monad/: Dist.hs  Distribution.hs  Maybe.hs  MonoidValue.hs  Perhaps.hs
Control/Monad/Distribution/: Base.hs  Double.hs  Rational.hs
Data/: BST.hs  Prob.hs  Probability.hs
Data/Probability/: Base.hs  Double.hs  Rational.hs
examples/: MaybeIO.hs  Probability.hs  coins.hs  door-particles-2.xcf  door-particles.xcf  drug-test.hs  family.hs  new.hs  spam.hs
