Name:                Probability
Version:             0.0
Synopsis:            Tools for calculating with probabilities.
Description:         Probabilities, probability distribution monads, and related
                     tools.
License:             BSD3
License-file:        LICENSE
Author:              Eric Kidd
Stability:           experimental
Build-Depends:       base, mtl, MaybeT, MonadRandom
Exposed-modules:     Data.Probability,
                     Data.Probability.Double, Data.Probability.Rational,
                     Control.Monad.MonoidValue,
                     Control.Monad.Distribution
ghc-options:         -Wall -O
